--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,20 +7,48 @@
     <title>Homework</title>
     <link rel="stylesheet" href="./main.css">
 </head>
+
 <body class="main">
-    <header> <table   class="bigHead" > <tr> <td> 
-<H2 class="helloa">About us </H2></td>
-    <td>
-        <h2>Menu</h2>
-    </td>
-    <td> 
-<h2> Contacts</h2>
-    </td>
-    <td> 
-<h2>Questions</h2>
-    </td>
-</tr></table>
-</header>
-    
+    <div>
+        <header>
+            <table class="headTabl">
+                <tr>
+                    <td>
+                        <H2 class="helloa">About us </H2>
+                    </td>
+                    <td>
+                        <h2>Menu</h2>
+                    </td>
+                    <td>
+                        <h2> Contacts</h2>
+                    </td>
+                    <td>
+                        <h2>Questions</h2>
+                    </td>
+                </tr>
+            </table>
+        </header>
+    </div>
+    <div id="content">
+        <img src="./public/images/99818-ed4_wide.jpeg" alt=""> 
+    </div>
+
+    <footer>
+        <table class="footTabl">
+            <tr>
+                <td>
+                    <h2> Our Contacts:</h2>
+                </td>
+            </tr>
+            <tr>
+                <td> <a href="vk.com/mmxviil">VK</a></td>
+            </tr>
+            <TR>
+                <td> <a href="github.com/alekots">Github</a></td>
+            </TR>
+        </table>
+    </footer>
+
 </body>
+
 </html>
