prorabital lekciu yf 75%

--- a/hometask.html
+++ b/hometask.html
@@ -5,8 +5,13 @@
   <meta http-equiv="X-UA-Comptible" content="IE=Edge">
   <meta name="viepoint", content="width=device-width, initial-scale=1.0">
   <title>сворованный экземпляр</title>
+  <link href="./public/index.css" rel="stylesheet">
+
  </head>
  <body>
+   <div id = "red">kfjfkfj</div>
+   <img src="public/el9R_MewCAA.jpg"/>
+   <div>Это так важно?</div>
   <h1>Заголовок номер 1.</h1>
   <p>Первый абзац.</p>
   <p>Первого достаточно!</p>
