--- a/index.html
+++ b/index.html
@@ -9,42 +9,53 @@
 </head>
 
 <body class="main">
-    <div>
-        <header>
-            <table class="headTabl">
-                <tr>
-                    <td>
-                        <H2 class="helloa">About us </H2>
-                    </td>
-                    <td>
-                        <h2>Menu</h2>
-                    </td>
-                    <td>
-                        <h2> Contacts</h2>
-                    </td>
-                    <td>
-                        <h2>Questions</h2>
-                    </td>
-                </tr>
-            </table>
-        </header>
-    </div>
+
+    <header>
+        <table class="headTabl">
+            <tr>
+                <td>
+                    <H2 class="helloa">About us </H2>
+                </td>
+                <td>
+                    <h2>Menu</h2>
+                </td>
+                <td>
+                    <h2> Contacts</h2>
+                </td>
+                <td>
+                    <h2>Questions</h2>
+                </td>
+            </tr>
+        </table>
+    </header>
+
     <div id="content">
-        <img src="./public/images/99818-ed4_wide.jpeg" alt=""> 
+        <table class="tubl">
+            <tr class="spec">
+                <td>
+                    <img src="./public/images/99818-ed4_wide.jpeg" alt="" width="400px"> </td>
+                <td>
+                    <img src="./public/images/9e62c8f7ac92abee6f11da12eaf32b32.jpeg" alt="" width="400px"> </td>
+            </tr>
+            <tr class="cped">
+                <td>
+                    <h2 class="slogan"> Chief's dish</h2>
+                </td>
+                <td>
+                    <h2 class="slogan"> Our hall</h2>
+                </td>
+            </tr>
+        </table>
     </div>
 
     <footer>
         <table class="footTabl">
+            <h2> Our contacts</h2>
             <tr>
-                <td>
-                    <h2> Our Contacts:</h2>
-                </td>
-            </tr>
-            <tr>
-                <td> <a href="vk.com/mmxviil">VK</a></td>
+                <td> <a href="https://vk.com/mmxviil">VK</a></td>
             </tr>
             <TR>
-                <td> <a href="github.com/alekots">Github</a></td>
+                <td> <a href="https://github.com/Alekots">Github</a></td>
             </TR>
         </table>
     </footer>
