--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,5 @@
 <html>
-
+<header>
 <head>
     <meta charset="utf-8">
     <title>Zlk Hotel&Resort</title>
@@ -15,16 +15,14 @@
         <a href="##">Map</a> <a href="##">SPA</a>
     </body>
 </body>
-
-</html>
-
+</header>
+<div>
 <body>
     <img src="/Users/kirill./IT-SCHOOL-WEB-1/images/photo main 1.jpeg">
 </body>
 
-</html>
-<html>
-
+</div>
+<footer>
 <body>
     <h1>Contacts</h1>
 </body>
@@ -33,5 +31,5 @@
     <a href="https://github.com/Kirill1033" target="_blank">Github</a>
     <a href="https://www.instagram.com/z_zlk_z/" target="_blank">Instagram</a>
 </body>
-
+</footer>
 </html>
