--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="./main.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <table class="headT">
+        <tr>
+            <td>
+                <h2>collection</h2>
+            </td>
+            <td>
+                <h2>sales</h2>
+            </td><td><h2>contacts</h2></td>
+        </tr>
+    </table>
+
 </body>
+
 </html>
