the task is 2/3

--- a/hometask.html
+++ b/hometask.html
@@ -2,18 +2,40 @@
 <html lang="en">
  <head>
    <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Comptible" content="IE=Edge">
-  <meta name="viepoint", content="width=device-width, initial-scale=1.0">
-  <title>сворованный экземпляр</title>
-  <link href="./public/index.css" rel="stylesheet">
-
+   <meta http-equiv="X-UA-Comptible" content="IE=Edge">
+   <meta name="viepoint", content="width=device-width, initial-scale=1.0">
+   <title>сворованный экземпляр</title>
+   <link href="./public/index.css" rel="stylesheet">
+  <style>
+    body{
+      margin: 0px;
+      background-color: rgb(28, 28, 99);
+      color: rgb(170, 169, 167);
+    }
+    h1{
+      margin: 0px;
+    }
+  </style>
  </head>
  <body>
-   <div id = "red">kfjfkfj</div>
-   <img src="public/el9R_MewCAA.jpg"/>
-   <div>Это так важно?</div>
-  <h1>Заголовок номер 1.</h1>
-  <p>Первый абзац.</p>
-  <p>Первого достаточно!</p>
+    <div class = "Kila">
+      <img src="public/el9R_MewCAA.jpg" />
+      <button class = "information">Информация</button>
+      <button class = "product">Наш продукт</button>
+      <button class = "guarantee">Гарантия</button>
+      <button class = "reviews">Отзывы</button>
+    </div>
+    <div class = "mid"><p class = "paragph">Очень интересная информация о нашем продукте, прочитав которую, ты точно захочешь его купить</p></div>
+    <div class = "end">
+      <button class = "vk">
+        <a href="https://vk.com/pablick993">Страничка ВК</a>
+      </button>
+      <button class = "so">
+        <a href="https://stackoverflow.com/users/17258864/pablick">Stack overflow</a>
+      </button>
+      <button class = "gh">
+        <a href="https://github.com/pavlele">Github</a>
+      </button>
+    </div>
  </body>
 </html>
