--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MINIMOSTORE</title>
 </head>
-
 <body>
+        <h1 class='head1'>MINIMO</h1>
     <table class="headT">
         <tr>
             <td>
-                <h2>collection</h2>
+                <h2>Collection</h2>
             </td>
             <td>
-                <h2>sales</h2>
-            </td><td><h2>contacts</h2></td>
+                <h2>Sales</h2>
+    </td><td><h2>Contacts</h2></td>
         </tr>
     </table>
 
