Добавляем все остальное

--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Zink Site</title>
+    <link href="style.css" rel="stylesheet">
+    <title>ZinkSite</title>
 </head>
 <body>
     <header>
-        <img src="img/logo/Zink White.jpg">
+        <img src="img/logo/Zink White.jpg" style="height: 150px; margin-right: 10px;">
+        <div>
+            <h1>Welcome to ZinkSite</h1>
+            <span>A better space for Cogwheels<br>...and people</span>
+        </div>
     </header>
     <main>
+        <h2 style="margin-bottom: 5px;">Лучшие Шестеренки месяца:</h2>
         <div class="contentBlock">
             <div class="contentItem">
                 <span>Стальные шестерни</span>
