filled the content with photos, but have problems with text

--- a/hometask.html
+++ b/hometask.html
@@ -25,7 +25,14 @@
       <button class = "guarantee">Гарантия</button>
       <button class = "reviews">Отзывы</button>
     </div>
-    <div class = "mid"><p class = "paragph">Очень интересная информация о нашем продукте, прочитав которую, ты точно захочешь его купить</p></div>
+    <div class = "mid">
+      <p class = "paragph">Очень интересная информация о нашем продукте, прочитав которую, ты точно захочешь его купить</p>
+        <div class = "whiteblock">
+          <img class = "zakat1" src="public/426750-Kycb.jpg" alt="">
+          <img class = "zakat2" src="public/ba7147e0cb974f9a9fe2977bef6660bb.max-2500x1500.jpg" alt="">
+          <div class = "text2">На продажу выставленны две фотографии заката в прекрасном городое Токио. Автор эти двух картин - изветсный японский фотограф Джун Кук. Стоимость каждой фотографии 300$.</div>
+        </div>
+    </div>
     <div class = "end">
       <button class = "vk">
         <a href="https://vk.com/pablick993">Страничка ВК</a>
