--- a/MySite.html
+++ b/MySite.html
@@ -6,6 +6,11 @@
     <link href="MySite.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<header>
+    <p><img id="logo" src="img/logo.png" height="70px"></p>
+
+</header>
+<article>
 <div>
     <div>
         <h1 id="title">Welcome to dgell's site!</h1>
@@ -15,14 +20,15 @@
 
     </div>
     <div>   
-        <button><img id="beer" src="pngwing.com.png">send money for beer</button>
+        <button><img src="img/beer.png" height="60px">&nbsp;send money for beer</button>
     </div>
 
 </div>
-
-
-
-
-
+</article>
+<footer>
+    <p class="links"><a href="https://www.instagram.com/d.gellss/"><img src="img/instagram.png" width="50px" height="50px"></a> &nbsp;&nbsp;
+        <a href="https://vk.com/itslillina"><img src="img/vk.png" width="50px" height="50px"></a>
+    </p>
+</footer>
 </body>
 </html>
