--- a/index.html
+++ b/index.html
@@ -3,22 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href = "index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fruktur&display=swap" rel="stylesheet">
     <title>lieless the best</title>
-    <div>
-        <h1>He said once</h1>
-        <div id="quote">
-            <hr>
-            <q>Can't stop, won't stop!</q>
-            <hr>
-        </div>
-        <h2>And he didn't stop</h2>
-    </div>
-
 </head>
 <body>
+    <header>
+        <div>
+            <img src="images/EMIT_Logo1 (1).png" alt="IMAGE FAILED ;(" height = 70px id="logo">
+        </div>
+    </header>
+    <article>
+        <div>
+            <h1>He said once</h1>
+            <div id="quote">
+                <hr>
+                <q>Can't stop, won't stop!</q>
+                <hr>
+            </div>
+        <h2>And he didn't stop</h2>
+        </div>
+        <div class = "WhiteContent">
 
+        </div>
+    </article>
+    <footer>
+        <a href="https://vk.com/id73186708"><img src="images/VK_Blue_Logo_t-340x340.png" height = 50px></a>
+        &nbsp;
+        <a href="https://instagram.com/bnyc11?r=nametag"><img src="images/2048px-Instagram_icon.png" height = 50px></a>
+        &nbsp;
+        <a href="https://github.com/lieless"><img src="images/GitHub-Mark.png" height = 50px></a>
+    </footer>
 </body>
-<footer>
-
-</footer>
 </html>
