--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
         <h2>And he didn't stop</h2>
         </div>
         <div class = "WhiteContent">
-
+            <div class = "item">
+                <img class = "picture" src="https://www.belta.by/images/storage/news/with_archive/2020/000029_1605623147_416053_big.jpg">
+                <figcaption>"First stage"</figcaption>
+            </div>
+            <div class = "item">
+                <img class = "picture" src="https://i.ytimg.com/vi/dULhrn9Uyn4/maxresdefault.jpg">
+                <figcaption>"Second stage"</figcaption>
+            </div>
+            <div class = "item">
+                <img class = "picture" src="https://cs9.pikabu.ru/post_img/big/2018/05/18/8/1526645688162141385.jpg">
+                <figcaption>"Third stage"</figcaption>
+            </div>
+            <div class = "item">
+                <img class = "picture" src="https://cdnn21.img.ria.ru/images/155666/00/1556660022_557:0:2605:2048_1920x0_80_0_0_7f3de1335e13e396924b49bc6a483e45.jpg">
+                <figcaption>"Fourth stage"</figcaption>
+            </div>
         </div>
     </article>
     <footer>
