--- a/my_first_page.html
+++ b/my_first_page.html
@@ -1,13 +1,73 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="utf-8">
-    <title>Задание 1</title>
+    <meta charset = "utf-8">
+    <title>по приколу</title>
+    <link rel = "stylesheet" href = "index.css">
 </head>
 <body>
     <header>
-        <h1>IT-School</h1>
+        <div id = "title">doma.shhka</div>
+        <nav>Ничего обо мне Ничего не умею Ничем не занимаюсь</nav>
     </header>
+    <aside>
+        <p>Здесь смешные картиночки:</p>
+        <img src = "./pics/chupapupa.jpg">
+        <img src= "./pics/pravki.jpg">
+        <img src= "./pics/shrekspeks.jpg">
+    </aside>
+    <section>
+        <article>
+        <p> Здесь написано что-то очень занятное.</p>
+        <p> Ну, чисто к примеру, скажем, следующее...</p>
+        <p> Блядь, да мне похуй на тебя, блядь, слушай. Какая у тебя там тачка, блядь, квартиры, срачки, там блядь, яхты, всё — мне похуй там. 
+            Хоть «Бентли», хоть, блядь, нахуй, «Майбах», хоть «Роллс-Ройс», хоть «Бугатти», 
+            блядь, хоть стометровая яхта — мне на это насрать, понимаешь? Сколько ты там, кого ебёшь, каких баб, 
+            каких, значит, вот этих самок, шикарных или атласных, блядь, в космос ли ты летишь — мне на это насрать, 
+            понимаешь? Я, блядь, в своем познании настолько преисполнился, что я как будто бы уже сто триллионов миллиардов лет, 
+            блядь, проживаю на триллионах и триллионах таких же планет, понимаешь? Как эта Земля. Мне уже этот мир абсолютно понятен, 
+            и я здесь ищу только одного, блядь: покоя, умиротворения и вот этой гармонии от слияния с бесконечно вечным, от созерцания этого 
+            великого фрактального подобия и от вот этого вот замечательного всеединства существа бесконечно вечного — куда ни посмотри: хоть в глубь — бесконечно 
+            малое, хоть ввысь — бесконечно большое, понимаешь? А ты мне опять со своими, там, это. Иди, суетись дальше, твое распределение — 
+            это твой путь и твой горизонт познания, ощущения и твоей природы. И он несоизмеримо мелок по сравнению с моим, понимаешь? </p>
+        <p> Я как будто уже глубокий старец бессмертный или, там, уже почти бессмертный, который на этой планете от её самого 
+            зарождения, еще когда только Солнце только-только сформировалось как звезда и вот это газопылевое облако, вот, после взрыва Солнца, 
+            когда оно вспыхнуло, как звезда, начало формировать коацерваты-планеты, понимаешь? Я на этой Земле уже как будто почти 
+            пять миллиардов лет, блядь, живу и знаю её уже вдоль и поперек, этот весь мир, а ты мне, там, какие-то это. 
+            Мне похуй на твои тачки, на твои, блядь, нахуй, яхты, на твои квартиры, там, на твоё благо, понимаешь? Я был на этой планете, 
+            так сказать, или бесконечном множестве, и круче Цезаря, и круче Гитлера, блядь, и круче всех великих, понимаешь, был? 
+            А где-то был конченым говном, ещё хуже, чем здесь. Потому что я множество этих состояний чувствую. 
+            Где-то я был больше подобен растению, где-то был больше подобен птице, там, червю, где-то просто был сгусток камня. Это все есть 
+            душа, понимаешь? Она вот имеет грани подобия совершенно многообразные, бесконечное множество. Но тебе этого не понять, 
+            поэтому ты езжай себе, блядь. Мы в этом мире как бы живём разными ощущениями, разными стремлениями. Соответственно, разное наше и 
+            место, разное наше распределение.</p>
+        <p> Тебе я желаю, все самые крутые тачки чтобы были у тебя, и все самые лучшие самки, чтобы 
+            раздвигали перед тобой ноги там, все свои щели нашиворот-навыворот, блядь, перед тобой, как ковёр, это самое, раскрывали и 
+            растлевали, растлали. И ты их чтобы ебал, до посинения, до красна, до солнца закатного. Чтоб на лучших яхтах, 
+            на самолётах летал и кончал прямо с иллюминатора и всё, что только может в голову прийти и не прийти. Если мало идей – 
+            обращайся ко мне, я тебе на каждую твою идею еще сотни триллионов подскажу как, что делать. Ну а я всё, я иду, как глубокий старец, 
+            узривший вечное, прикоснувшийся к божественному, сам стал богоподобен и устремлен в это бесконечное, 
+            который в умиротворении, покое, гармонии, благодати, в этом сокровенном блаженстве пребывает, вовлечённый во всё и во вся, понимаешь?</p>
+        <p> Вот и всё. В этом наша разница. Так что, я иду любоваться мирозданием, а ты идёшь какой-то преисполняться в гранях каких-то. 
+            Вот и вся разница, понимаешь? Ты не зришь это вечное бесконечное, оно тебе не нужно. Но зато ты, так сказать, более активен, 
+            как вот этот дятел долбящий или муравей, который вот очень активен в своей стезе, вот и всё. Поэтому давай, наши пути здесь, 
+            так сказать, имеют, конечно, грани подобия, потому что всё едино, но ты меня… Я-то тебя прекрасно понимаю, а вот ты — вряд ли, 
+            потому что, как бы, я, ты и, как бы, я тебя в себе содержу — всю твою природу, она составляет одну маленькую, там, песчиночку 
+            от того, что есть во мне, понимаешь? Вот и всё. Поэтому давай ступай, езжай, а я пошел наслаждаться, нахуй, блядь, прекрасным 
+            осенним закатом, блядь, на берегу тёплой южной реки. Всё, пиздуй-бороздуй и я попиздил нахуй.</p>
+        </article>
+    </section>
+    <footer>
+        <div class="footer-top">Контакты:</div>
+        <div class="container">
+            <ul>
+                <li>instagram: <a href="https://www.instagram.com/krylokha/">@krylokha</a></li>
+                <li>telegram: @krylokha</li>
+                <li>VK: <a href='https://vk.com/priceliss'>Елизавета Крылова</a></li>
+                <li>github: <a href="https://github.com/krylokha">krylokha</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
 
