pre-final version

--- a/my_first_page.html
+++ b/my_first_page.html
@@ -2,24 +2,33 @@
 <html lang="ru">
 <head>
     <meta charset = "utf-8">
-    <title>по приколу</title>
+    <title>DAMAGEшка</title>
     <link rel = "stylesheet" href = "index.css">
 </head>
-<body>
+<body style = "background:rgba(121, 143, 218, 0.452);">
     <header>
+        <img src="pics/domashka.png" id="logo">
         <div id = "title">doma.shhka</div>
-        <nav>Ничего обо мне Ничего не умею Ничем не занимаюсь</nav>
+        <nav>
+            <ul>
+                <li>Ничего обо мне</li> 
+                <li>Ничего не умею </li>
+                <li>Ничем не занимаюсь</li>
+            </ul>
+        </nav>
     </header>
-    <aside>
-        <p>Здесь смешные картиночки:</p>
-        <img src = "./pics/chupapupa.jpg">
-        <img src= "./pics/pravki.jpg">
-        <img src= "./pics/shrekspeks.jpg">
-    </aside>
     <section>
+        <aside>
+            <p>Здесь смешные картиночки:</p>
+            <img id="img" src = "./pics/chupapupa.jpg">
+            <img id = "img" src= "./pics/pravki.jpg">
+            <img id="img" src= "./pics/shrekspeks.jpg">
+        </aside>
         <article>
-        <p> Здесь написано что-то очень занятное.</p>
-        <p> Ну, чисто к примеру, скажем, следующее...</p>
+        <p> Здесь написано что-то <b>очень</b> некрасивое.</p>
+        <p> Но всем слишком знакомое, близкое.</p>
+        <p> Ты <i>уверен</i>, что хочешь читать далее?</p>
+        <p> Что же, ты сам выбрал свой путь, странник...</p>
         <p> Блядь, да мне похуй на тебя, блядь, слушай. Какая у тебя там тачка, блядь, квартиры, срачки, там блядь, яхты, всё — мне похуй там. 
             Хоть «Бентли», хоть, блядь, нахуй, «Майбах», хоть «Роллс-Ройс», хоть «Бугатти», 
             блядь, хоть стометровая яхта — мне на это насрать, понимаешь? Сколько ты там, кого ебёшь, каких баб, 
