--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset = "utf-8">
     <title>DAMAGEшка</title>
-    <link rel = "stylesheet" href = "index.css">
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body style = "background:rgba(121, 143, 218, 0.452);">
     <header>
