--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <h1 class='head1'>MINIMO</h1>
-    <table class="headT">
+    <table border='4' width='600' class="headT">
         <tr>
             <td>
                 <h2>Collection</h2>
