--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MINIMOSTORE</title>
+    <title>MYTHINGSTORE</title>
 </head>
 <body>
-        <h1 class='head1'>MINIMO</h1>
-    <table border='4' width='600' class="headT">
+    <header class="header">MYTHINGSTORE</header>
+        <h1 class='head1'>MYTHING</h1>
+    <table border="4" class="headT">
         <tr>
             <td>
                 <h2>Collection</h2>
@@ -20,6 +21,7 @@
     </td><td><h2>Contacts</h2></td>
         </tr>
     </table>
+    <footer>ddstr.ru</footer>
 
 </body>
 
