--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>MYTHINGSTORE</title>
 </head>
 <body>
-    <header class="header">MYTHINGSTORE</header>
+    <div header class="header">MYTHINGSTORE</header>
         <h1 class='head1'>MYTHING</h1>
     <table border="4" class="headT">
         <tr>
@@ -21,8 +21,8 @@
     </td><td><h2>Contacts</h2></td>
         </tr>
     </table>
-    <footer>ddstr.ru</footer>
-
-</body>
+    </div>
+    <a class="footer" href="https://instagram.com/strigina_darya?utm_medium=copy_link" target="_blank"><img src='https://ru.inettools.net/downloadWfile/16375984'></a>
+</body> 
 
 </html>
