--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
     <title>MYTHINGSTORE</title>
 </head>
 <body>
-    <div header class="header">MYTHINGSTORE</header>
+    <div header class="header">MYTHINGSTORE</header></div>
         <h1 class='head1'>MYTHING</h1>
-    <table border="4" class="headT">
+    <table border="4" width="900" class="headT">
         <tr>
-            <td>
+            <td class="row">
                 <h2>Collection</h2>
             </td>
             <td>
                 <h2>Sales</h2>
-    </td><td><h2>Contacts</h2></td>
+            </td>    
+            <td class="row1">
+                <h2>Contacts</h2>
+            </td>
         </tr>
     </table>
-    </div>
     <a class="footer" href="https://instagram.com/strigina_darya?utm_medium=copy_link" target="_blank"><img src='https://ru.inettools.net/downloadWfile/16375984'></a>
 </body> 
 
