first task finished in file taskOne.html, added some style settings in styles.css

--- a/taskOne.html
+++ b/taskOne.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<title>TI EBLAN</title>
+	<link rel="stylesheet" href="styles.css" type="text/css">
+
 </head>
 <body>
-    
+    <div id="wrapper">
+		<header>
+            <a href="/"><img src="images/skala.jpg" alt="Skala Jgonson"></a>
+        </header>
+		<nav></nav>
+		<div>Ебать ты <b>ЛОХ</b> братишка</div>
+		<aside></aside>
+		<section></section>
+	</div>
+	<footer></footer>
 </body>
 </html>
