--- a/taskOne.html
+++ b/taskOne.html
@@ -4,19 +4,16 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<title>TI EBLAN</title>
-	<link rel="stylesheet" href="styles.css" type="text/css">
+	<link rel="stylesheet" href="stylesFirst.css" type="text/css">
 
 </head>
 <body>
-    <div id="wrapper">
 		<header>
             <a href="/"><img src="images/skala.jpg" alt="Skala Jgonson"></a>
         </header>
 		<nav></nav>
 		<div>Ебать ты <b>ЛОХ</b> братишка</div>
 		<aside></aside>
-		<section></section>
 	</div>
-	<footer></footer>
 </body>
 </html>
