header/footer but wacky

--- a/my worky/michael.html
+++ b/my worky/michael.html
@@ -1,13 +1,46 @@
 <head>
-    <link rel="stylesheet" href="/my worky/michael.css">
-    <title> my website lmao </title>
-    <header >
-        <h1 >michael's website lessgo!</h1> 
-        <img src="/my worky/nicekidmichael1.png" >
-    </header>
-    <body>
-        <div> the very beginning </div>       
-    </body>
-</head>
+<link rel="stylesheet" href="michael.css" type='text/css'> 
+<title> nicekidmichael </title>
 
+<div class="header">
+    <!--- <img src="/my worky/images/nicekidmichael.png" class='center' width="250" height="50" > --->
+    <div class="logo_container"> 
+        <h1> N K M </h1> 
+    </div>
+</div>
+
+<body>
+    <div> the very beginning </div>
+
+    <p> 
+        <div>
+            Hello ladies and gentlemen! This is my test website and you're extremely welcome to this masterpiece 
+            
+        </div> 
+    </p>
+</body>
+
+<footer>
+    <p> 
+        michael's socials
+
+        <a href="https://www.instagram.com/nicekidmichael"> <img src="./images/insta.png" alt="" width="15" height="15" > </a>
+        <a href="https://www.twitch.tv/nicekidmichael"> <img src="./images/twitch.png" alt="" width="15" height="15" > </a>
+        <a href="https://vk.com/dontcopythisfockinlink"> <img src="./images/vk.png" alt="" width="15" height="15" > </a>
+    </p> 
+</footer>
+
+<div class="header">
+    <div class="logo_container"> 
+        <p> 
+            michael's socials
+    
+            <a href="https://www.instagram.com/nicekidmichael"> <img src="./images/insta.png" alt="" width="15" height="15" > </a>
+            <a href="https://www.twitch.tv/nicekidmichael"> <img src="./images/twitch.png" alt="" width="15" height="15" > </a>
+            <a href="https://vk.com/dontcopythisfockinlink"> <img src="./images/vk.png" alt="" width="15" height="15" > </a>
+        </p>
+    </div>
+</div>
+
+</head>
 <!---class='page-header'--->
