--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
     <meta name="description" content="Проект Варламовой Виктории по HTML и CSS"> 
     <title>Мой первый проект</title>
     <link href="./public/main.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet"> 
 </head>
-<body>
-    <div class="zz"> 
-        <hr/> 
-        <p1> <center>Добро пожаловать на мое болото</center></p1>
-        <hr/>
+<body link=#ffebcd vlink=#ffebcd alink=#99ff99>  
+    <div id="header">
+        <p1 class="title"><center>Мое болото</center></p1>
+        <div class="nad"><center>Не будьте как дома, вам тут официально не рады. Это факт.</center></div>
+        <ul class = "menu">
+            <li title="Все вам расскажи, конечно">Обо мне</li>
+            <li title="Так уж и быть, смотрите ниже">Контакты</li>
+            <li title="Зачем? Я вас не звал">Местоположение</li>
+           </ul>
     </div>
+<div class="wrapper">
+    <div class="content">
+
+    </div>
+</div>
+<div id="footer">
+    <ul class="contacts"> 
+        <li id="c">Обещанные контакты <s>(надеюсь вы никогда ими не воспользуетесь)</s>:</li>
+        <li><a href="https://vk.com/viktoria_vs3">Вконтакте</a></li>
+        <li><a href="https://www.instagram.com/utochka_in_ozero/">Инстаграм</a></li>
+        <li><a href="https://github.com/victoria-vs">GitHub</a></li>
+    </ul>
+</div>
 </body>
 </html>
