--- a/index.html
+++ b/index.html
@@ -21,8 +21,21 @@
     </div>
 <div class="wrapper">
     <div class="content">
-
+        <div id="boloto">
+            Есть только я и мое болото! Посмотрите на него в первый и последний раз!<img src="./public/hand.jpg" id="hand" title="Смотреть туда">
+        </div>
+        <div style="border: 8px solid; border-radius: 4px; padding: 20px; height: 500px; width: 1720px; position: relative; top: 100px; left: 30px; overflow: scroll; ">
+            <div >
+                <img src="./public/p1.jpg">     <p3 class="song">Somebody once told me</p3> </br>
+                <img src="./public/theworldisgonnarollme.jpg">     <p3 class="song">the world is gonna roll me</p3></br>
+                <img src="./public/p3.jpg">     <p3 class="song">I ain't the sharpest tool in the shed...</p3></br>
+            </div>
+        </div>
+        <div style="font-family:'Neucha', cursive; font-size: 35px; position: relative; top: 150px; left: 30px; color: black;">
+            Посмотрели? Тогда убирайтесь!
+        </div>
     </div>
+
 </div>
 <div id="footer">
     <ul class="contacts"> 
