--- a/index.html
+++ b/index.html
@@ -10,56 +10,74 @@
 
 <body>
     <header>
-        <button>
-        <div class="dws"><a href="#" class="butt">обо мне</a></div>
-        </button>   
+        <div class="header">
+            <div class="header_section">
+                <div class="header_logo">
+                    <img class="foto" src="./Public/shikamaru.jpeg" />
+                </div>
 
-        <button>
-            о тебе
-        </button>
+                <div class="dws">
+                    <a href="#" class="butt">информация </a>
+                </div>
 
-        <button>
-            о нас с тобой
-        </button>
+                <div class="dws1">
+                    <a href="#" class="butt1">мы на карте</a>
+                </div>
 
+                <div class="dws2">
+                    <a href="#" class="butt2">faq</a>
+                </div>
+            </div>
+        </div>
 
     </header>
+
+
     <hr />
     <p class="HI">
-        <center>
-            Привет! Это проект "FIRST PROJECT" поставь глочку, если понравится проект
-            <input type="checkbox" checke>
-        </center>
+        <div class="HI">
+            <center>
+                Привет! Это проект "FIRST PROJECT" поставь глочку, если понравился проект
+                <input type="checkbox" checke>
+            </center>
+        </div>
     </p>
     <hr />
+    <div
+        style="border: 8px solid; border-radius: 4px; padding: 20px; height: 400px; width: 520px; position: relative; top: 100px; left: 30px; overflow: scroll; ">
+        <img class="clown" src="./Public/clownwatch1.png" />
+    </div>
+
+    
+    <div class="probel">
 
     </div>
-    <img
-        src="https://img2.freepng.ru/20190202/ifk/kisspng-evil-clown-stock-photography-royalty-free-image-clowns-5c55dba88fb5a5.8802525715491306645886.jpg" />
+
     <footer>
 
-        <div class="button1">
-            <button>
+        <ul class="social">
+            <div class="vk">
+
                 <a href="https://vk.com/yy0ng" target="_blank">
                     VK
                 </a>
-            </button>
-        </div>
-        <div>
-            <button class="button2">
+
+            </div>
+            <div class="gith">
+
                 <a href="https://github.com/yyong1" target="_blank">
                     GitHub
                 </a>
-            </button>
-        </div>
-        <div>
-            <button class="button3">
+
+            </div>
+            <div class="inst">
+
                 <a href="https://www.instagram.com/yy_o_ng/" target="_blank">
                     Instagram
                 </a>
-            </button>
-        </div>
 
+            </div>
+        </ul>
     </footer>
 </body>
 
