added cursorPointer, scrollbar

--- a/hometask.html
+++ b/hometask.html
@@ -6,6 +6,7 @@
    <meta name="viepoint", content="width=device-width, initial-scale=1.0">
    <title>сворованный экземпляр</title>
    <link href="./public/index.css" rel="stylesheet">
+
   <style>
     body{
       margin: 0px;
@@ -16,6 +17,16 @@
       margin: 0px;
     }
   </style>
+  <style>
+    .prokrutka {
+    height: 900px;
+    width: 1000px;
+    background: #fff;
+    border: 1px solid #C1C1C1;
+    overflow-x: scroll;
+    overflow-y: scroll;
+    }
+    </style>
  </head>
  <body>
     <div class = "Kila">
@@ -28,9 +39,11 @@
     <div class = "mid">
       <p class = "paragph">Очень интересная информация о нашем продукте, прочитав которую, ты точно захочешь его купить</p>
         <div class = "whiteblock">
+          <div class="prokrutka">
           <img class = "zakat1" src="public/426750-Kycb.jpg" alt="">
           <img class = "zakat2" src="public/ba7147e0cb974f9a9fe2977bef6660bb.max-2500x1500.jpg" alt="">
           <div class = "text2">На продажу выставленны две фотографии заката в прекрасном городое Токио. Автор эти двух картин - изветсный японский фотограф Джун Кук. Стоимость каждой фотографии 300$.</div>
+        </div>
         </div>
     </div>
     <div class = "end">
