--- a/my worky/michael.html
+++ b/my worky/michael.html
@@ -4,40 +4,44 @@
 
 <div class="header">
     <!--- <img src="/my worky/images/nicekidmichael.png" class='center' width="250" height="50" > --->
-    <div class="logo_container"> 
-        <h1> N K M </h1> 
+    <div> 
+        <h1 class="nkm-name"> N K M </h1> 
     </div>
 </div>
 
-<body>
-    <div> the very beginning </div>
+<body class="text body">
+    <div>
 
     <p> 
         <div>
             Hello ladies and gentlemen! This is my test website and you're extremely welcome to this masterpiece 
-            
         </div> 
     </p>
-</body>
-
-<footer>
     <p> 
-        michael's socials
+        <div>
+            I suggest you enjoy the memes i got here ^^
+        </div> 
+    </p>
 
-        <a href="https://www.instagram.com/nicekidmichael"> <img src="./images/insta.png" alt="" width="15" height="15" > </a>
-        <a href="https://www.twitch.tv/nicekidmichael"> <img src="./images/twitch.png" alt="" width="15" height="15" > </a>
-        <a href="https://vk.com/dontcopythisfockinlink"> <img src="./images/vk.png" alt="" width="15" height="15" > </a>
-    </p> 
-</footer>
+    </div>
 
-<div class="header">
-    <div class="logo_container"> 
+    <div class="memes"> 
+
+        <p> <img src="./michael's memes/big-chungus-meme-3.jpg" alt="" width="428" height="372"> <img src="./michael's memes/bigchungus meme1.jpg" alt="" width="428" height="372"> </p>
+        <p> <img src="./michael's memes/GTA_Big_Chunges.png" alt="" width="428" height="372"> <img src="./michael's memes/liberty chungus.jpg" alt="" width="428" height="372"> </p>
+        <p> <img src="./michael's memes/original big chungus.jpg" alt="" width="428" height="372"> <img src="./michael's memes/queen chungus.jpg" alt="" width="428" height="372"> </p>
+        <p> <img src="./michael's memes/small-mega chugus.jpg" alt="" width="428" height="372"> <img src="./michael's memes/triggered chungus.jpg" alt="" width="428" height="372"> </p>
+
+    </div>
+</body>
+<div class="footer">
+    <div> 
         <p> 
             michael's socials
     
             <a href="https://www.instagram.com/nicekidmichael"> <img src="./images/insta.png" alt="" width="15" height="15" > </a>
-            <a href="https://www.twitch.tv/nicekidmichael"> <img src="./images/twitch.png" alt="" width="15" height="15" > </a>
-            <a href="https://vk.com/dontcopythisfockinlink"> <img src="./images/vk.png" alt="" width="15" height="15" > </a>
+            <a href="https://www.twitch.tv/nicekidmichael"> <img src="./images/twitch.png" alt="" width="15" height="15" > </a> 
+            <a href="https://vk.com/dontcopythisfockinlink"> <img src="./images/vk.png" alt="" width="15" height="15" > </a> 
         </p>
     </div>
 </div>
